# controller-weigth

./: Cargo.toml  Dioxus.toml  README.md  datos_weight.db
assets/: main.css
assets/css/: informatio.css  main.css  register.css
src/: db_connection.rs  main.rs
src/components/: header.rs
src/hook/: mod.rs  use_read.rs
src/page/: home.rs  information.rs  mod.rs  register.rs
